[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/mushroom/mushroom4.png" type="Texture" id=1]
[ext_resource path="res://asset/groundUnit.png" type="Texture" id=2]
[ext_resource path="res://asset/mushroom/mushroom1.png" type="Texture" id=3]
[ext_resource path="res://Obstacle.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0
height = 68.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5, 473.07 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 140, 349 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.75, 475 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 21.0
height = 66.0

[node name="Obstacle" type="Node2D" groups=["obstacles"]]
script = ExtResource( 4 )

[node name="down" type="Area2D" parent="."]
position = Vector2( 0, 940 )

[node name="ground" type="Sprite" parent="down"]
position = Vector2( 140, 315 )
z_index = 200
texture = ExtResource( 2 )

[node name="mushroom" type="Sprite" parent="down"]
position = Vector2( 35, 225 )
z_index = 100
texture = ExtResource( 3 )

[node name="shroomCS2" type="CollisionShape2D" parent="down"]
position = Vector2( 35, -230 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="stemCS2" type="CollisionShape2D" parent="down"]
position = Vector2( 35, 225 )
shape = SubResource( 2 )

[node name="groundCS2" type="CollisionShape2D" parent="down"]
position = Vector2( 140, 350 )
shape = SubResource( 3 )

[node name="up" type="Area2D" parent="."]
position = Vector2( 35, -65 )

[node name="mushroom" type="Sprite" parent="up"]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="stemCS2" type="CollisionShape2D" parent="up"]
position = Vector2( -0.75, 0 )
shape = SubResource( 4 )

[node name="shroomCS2" type="CollisionShape2D" parent="up"]
position = Vector2( -2, 454 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1 )
rect = Rect2( 0, 0, 280, 1080 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
